2006-11-14 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: hold connections for some time and close
      too long connections.

    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/result_text_view.rb:
    * data/fantasdic/ui/menus.xml:
    * data/fantasdic/glade/main_app.glade: a new find pane to find words inside
    the text view, a new save definition dialog, Edit > Copy, and 
    Edit > Select All.             

2006-06-25 Mathieu Blondel <mblondel@cvs.gnome.org>

    * tools/: added dict-proxy.rb, dict-server.rb, edict2dictd.rb,
    kanjidic22dictd.rb, README, stardict2dictd.rb, tanakacorpus2dictd.rb

2006-06-22 Mathieu Blondel <mblondel@cvs.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade: made the treeview
    reorderable so that we can choose the sort order of definitions

2006-06-20 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: split lookup() into several functions and
    added support for "match:" prefix

2006-03-23 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/dict.rb: fixed bug which made Fantasdic crash 
    with some servers

2006-03-11 Mathieu Blondel <mblondel@cvs.gnome.org>

    * Changelog: renamed to ChangeLog

2006-03-09 Mathieu Blondel <mblondel@cvs.gnome.org>

    * po/Makefile: choose the ruby interpreter to run rgettext
    * lib/fantasdic/ui/main_app.rb: fixed a string
    * data/fantasdic/glade/main_app.glade: "look up" was not translatable

2006-03-05 Mathieu Blondel <mblondel@cvs.gnome.org>

    * Made Ruby/Gettext optional

2006-02-19 Mathieu Blondel <mblondel@cvs.gnome.org>

    * Some fixes to allow Fantasdic run under Windows
    * Some UI tweaks (glade files) (John Spray)
    * release 1.0-beta1.1

2006-02-17 Mathieu Blondel <mblondel@cvs.gnome.org>

    * release 1.0-beta1